metadata-retriever/metadata/objects/Fleet__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fleets</relationshipLabel>
        <relationshipName>Fleets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Status__c</fullName>
        <label>Action Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Actioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actioned_Date__c</fullName>
        <label>Actioned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alleged_Speed__c</fullName>
        <label>Alleged Speed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Vehicle_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Vehicle Relationship</label>
        <referenceTo>Customer_Vehicle_Relationship__c</referenceTo>
        <relationshipLabel>Fleets</relationshipLabel>
        <relationshipName>Fleets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealership</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fleets (Dealership)</relationshipLabel>
        <relationshipName>Fleets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fine_Amount__c</fullName>
        <label>Fine Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Follow_Up_Store_Manager__c</fullName>
        <label>First Follow Up Store Manager</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Infringement_Reference__c</fullName>
        <label>Infringement Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Management_Fee_Amount__c</fullName>
        <label>Management Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Tyres__c</fullName>
        <label>Number of Tyres</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obigation_Number__c</fullName>
        <label>Obigation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odometer__c</fullName>
        <label>Odometer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offence_Date_Time__c</fullName>
        <label>Offence Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Offence_Type__c</fullName>
        <label>Offence Type</label>
        <picklist>
            <picklistValues>
                <fullName>Speeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toll Fines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infringements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Light</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>BIO DIESEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIESEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIESEL B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFF ROAD DIESEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PETROL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PETROL E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PETROL P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <picklist>
            <picklistValues>
                <fullName>7 Eleven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caltex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomFleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gull Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorpass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OneCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other / Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Petroleum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Postcode__c</fullName>
        <label>Site Postcode</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Suburb__c</fullName>
        <label>Site Suburb</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Zone_KMs__c</fullName>
        <label>Speed Zone KMs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_GST_Inc__c</fullName>
        <label>Total Amount(GST Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Fleet</relationshipLabel>
        <relationshipName>Fleet</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fleet</label>
    <nameField>
        <label>Fleet Record Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet</pluralLabel>
    <recordTypes>
        <fullName>Fines</fullName>
        <active>true</active>
        <label>Fines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fleet_Management_Fee</fullName>
        <active>true</active>
        <label>Fleet Management Fee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fuel_Card</fullName>
        <active>true</active>
        <label>Fuel Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Out_of_Contract_Charge</fullName>
        <active>true</active>
        <label>Out of Contract Charge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Toll_Card</fullName>
        <active>true</active>
        <label>Toll Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tyres</fullName>
        <active>true</active>
        <label>Tyres</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>